--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.algonquincollege.benn0039.myapplication" >
+    package="com.algonquincollege.benn0039.loginExample" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.algonquincollege.benn0039.loginExample.MainActivity"
             android:label="@string/benn0039"
             android:theme="@android:style/Theme.Material.Wallpaper.NoTitleBar">
             <intent-filter>
